fix ready button visibility

--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,8 @@ h1 {
     left: 50%;
     transform: translate(-50%, 50%);
     display: none;
+    /* Avoid inheriting panels-containers' visibility. */
+    visibility: visible;
     z-index: 10;
 }
 
